[package]
name = "simple-cxx-qt-app"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A minimal Qt application built with Rust and CXX-Qt"
license = "MIT"
repository = "https://github.com/yourusername/simple-cxx-qt-app"
homepage = "https://github.com/yourusername/simple-cxx-qt-app"
documentation = "https://github.com/yourusername/simple-cxx-qt-app#readme"
keywords = ["qt", "rust", "cxx-qt", "qml", "gui"]
categories = ["gui", "api-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_qml", "qt_gui"] }

[build-dependencies]
cxx-qt-build = "0.7"
