[package]
name = "cxx-qt-fluent-ui"
version = "0.1.0"
edition = "2021"
authors = ["KDAB <info@kdab.com>"]
description = "Fluent Design QML component library built with Rust and CXX-Qt"
license = "MIT"
repository = "https://github.com/kdab/cxx-qt/CxxQtFluentUI"
homepage = "https://github.com/kdab/cxx-qt"
documentation = "https://github.com/kdab/cxx-qt/CxxQtFluentUI#readme"
keywords = ["qt", "rust", "cxx-qt", "qml", "fluent", "gui"]
categories = ["gui", "api-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_qml", "qt_gui"] }

[build-dependencies]
cxx-qt-build = "0.7"
